adds profile picture and social media icons at the bottom

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@ layout: default
     <div class="col-md-6">
         <h3 class="fw-bold">Introduction</h3>
     </div>
+    <img src="https://github.com/FavaroP/FavaroP.github.io/blob/gh-pages/assets/img/profile-picture.jpg" class="rounded float-right" alt="The profile picture">
 </div>
 
 <div class="row g-5 mb-5">
