--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{ site.title }}</title>
-  {%- comment -%}
-  <meta name="description" content=""> {%- endcomment -%}
+  {%- comment -%}<meta name="description" content=""> {%- endcomment -%}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384–1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  {%- comment -%} Including Bootstrap icons {%- endcomment -%}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  {%- comment -%} Including Font Awesome icons {%- endcomment -%}
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <script defer src="{{ site.url }}/assets/libs/fontawesome/all.min.js"></script>
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
