--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,6 +8,10 @@ liquid tag `{% include file.ext %}` can be used to include the partial in `_incl
 <div class="row g-5 mb-5">
     <div class="col-md-12">
         <h3 class="fw-bold border-bottom pb-3 mb-5">{{ page.title }}</h3>
-        {{ content }}
+        {% for post in site.posts %}
+        <p>
+            <a href="{{ site.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}
+        </p>
+        {% endfor %}
     </div>
 </div>
