--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -15,8 +15,8 @@ layout: default
         <p>Email: {{ contact.email }}</p>
         <p>Office: {{ contact.office }}</p>
       </div>
-      <div class="col-md-6">
-        <img src="{{ site.github.url }}/{{ contact.image }}" alt="Contact" width="100%">
+      <div class="col-md-6 d-flex justify-content-center align-items-center">
+        <img class="rounded profile-picture" src="{{ site.github.url }}/{{ contact.image }}" alt="Contact" width="100%">
       </div>
     </div>
     {% endfor %}
