--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,14 +4,19 @@ layout: default
 
 <div class="row g-5 mb-5">
     <div class="col-md-6">
-        <h3 class="fw-bold">Introduction</h3>
+        <h3 class="fw-bold">{{ site.data.settings.homepage.title }}</h3>
+        <p>
+            {{ site.data.settings.homepage.introduction }}
+        </p>
     </div>
-    <img src="https://github.com/FavaroP/FavaroP.github.io/blob/gh-pages/assets/img/profile-picture.jpg" class="rounded float-right" alt="The profile picture">
+    <div class="col-md-6 d-flex justify-content-end align-items-center">
+        <img src="{{ site.github.url }}{{ site.data.settings.homepage.profile_picture }}" class="rounded profile-picture" alt="The profile picture">
+    </div>
 </div>
 
 <div class="row g-5 mb-5">
     <div class="col-md-12">
-        <h3 class="fw-bold border-bottom pb-3 mb-5">Updates</h3>
+        <h3 class="fw-bold border-bottom pb-3 mb-5">News</h3>
         {% for post in site.posts %}
         <p>
             <a href="{{ site.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}
