--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,3 +12,11 @@ body {
 body a {
     color: $linkColor
 }
+
+.profile-picture {
+    display: block;
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+}
