--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,8 @@ $bodyColor: #212529;
 $bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $linkColor: #212529 !important;
 
+$dateAlignment: -120px;
+
 body {
     background: $backgroundColor;
     color: $bodyColor;
@@ -19,4 +21,91 @@ body a {
     max-height: 200px;
     width: auto;
     height: auto;
+}
+
+/* Timeline Styling. */
+// The right-hand side of the timeline 
+.timeline {
+    border-left: 3px solid $bodyColor; // the horizontal line
+    margin-left: 70px; // how far the timeline is moved from the left
+    position: relative;
+    line-height: 1.4em;
+    font-size: 1.03em;
+    padding: 50px;
+    list-style: none;
+    text-align: left;
+}
+
+@media (max-width: 767px) {
+    .timeline {
+        max-width: 98%;
+        padding: 25px;
+    }
+}
+
+// the headings of each event
+.timeline h2,
+.timeline h3 {
+    margin-bottom: 10px;
+    font-size: 1rem;
+}
+
+// The text of each event 
+.timeline .event {
+    border-bottom: 1px dashed #e8ebf1;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    position: relative;
+}
+
+@media (max-width: 767px) {
+    .timeline .event {
+        padding-top: 30px;
+    }
+}
+
+.timeline .event:last-of-type {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border: none;
+}
+
+.timeline .event:before,
+.timeline .event:after {
+    position: absolute;
+    display: block;
+    top: 0;
+}
+
+// The years. 
+.timeline .event:before {
+    left: $dateAlignment;
+    content: attr(data-date);
+    text-align: right;
+}
+
+@media (max-width: 767px) {
+    .timeline .event:before {
+        left: 0px;
+        text-align: left;
+    }
+}
+
+// The dots. 
+.timeline .event:after {
+    -webkit-box-shadow: 0 0 0 3px $bodyColor;
+    box-shadow: 0 0 0 3px $bodyColor;
+    left: -55.8px;
+    background: #fff;
+    border-radius: 50%;
+    height: 9px;
+    width: 9px;
+    content: "";
+    top: 5px;
+}
+
+@media (max-width: 767px) {
+    .timeline .event:after {
+        left: -31.8px;
+    }
 }
