--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -7,7 +7,7 @@ layout: default
     <h3 class="fw-bold border-bottom pb-3 mb5">Publications</h3>
     <div id="content">
 
-      <ul class="timeline">
+      <ul class="timeline link-styling">
 
         {% for item in site.data.publications.index %}
 
