--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,15 @@
-<header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-5 border-bottom">
-    <div>
-        <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
-            <span class="fs-4 fw-bold">{{ site.title }}</span>
-        </a>
+<header class="d-flex flex-column flex-md-row pb-3 mb-5 border-bottom">
+    <div class="align-items-center">
+        <div class="text-styling">
+            <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
+                <span class="fs-4 fw-bold">{{ site.title }}</span>
+            </a>
+        </div>
         <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
             <span>{{ site.description }}</span>
         </a>
     </div>
-    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto text-styling">
         {% for item in site.data.settings.menu %}
         <a class="me-3 py-2 text-decoration-none" href="{{ site.github.url }}{{ item.url }}">{{ item.name }}</a>
         {% endfor %}
