--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
     <div class="col-md-12">
         <h3 class="fw-bold border-bottom pb-3 mb-5">News</h3>
         {% for post in site.posts %}
-        <p>
+        <p class="link-styling">
             <a href="{{ site.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}
         </p>
         {% endfor %}
