--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,8 @@
 $backgroundColor: #ffffff;
 $bodyColor: #212529;
 $bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$linkColor: #212529 !important;
+$linkColor: rgb(33, 37, 41, 1) !important;
+$linkHoverColor: rgb(7, 26, 171) !important;
 
 $dateAlignment: -120px;
 
@@ -12,7 +13,7 @@ body {
 }
 
 body a {
-    color: $linkColor
+    color: $linkColor;
 }
 
 .profile-picture {
@@ -31,7 +32,7 @@ body a {
     position: relative;
     line-height: 1.4em;
     font-size: 1.03em;
-    padding: 50px;
+    padding: 20px 50px 20px 50px;
     list-style: none;
     text-align: left;
 }
@@ -47,12 +48,10 @@ body a {
 .timeline h2,
 .timeline h3 {
     margin-bottom: 10px;
-    font-size: 1rem;
 }
 
 // The text of each event 
 .timeline .event {
-    border-bottom: 1px dashed #e8ebf1;
     padding-bottom: 25px;
     margin-bottom: 25px;
     position: relative;
@@ -64,12 +63,14 @@ body a {
     }
 }
 
+// The last paper on the timeline
 .timeline .event:last-of-type {
     padding-bottom: 0;
     margin-bottom: 0;
     border: none;
 }
 
+// The years. 
 .timeline .event:before,
 .timeline .event:after {
     position: absolute;
@@ -108,4 +109,41 @@ body a {
     .timeline .event:after {
         left: -31.8px;
     }
+}
+
+// Link styling
+.link-styling a {
+    text-decoration: none;
+    background:
+        linear-gradient(to right,
+            rgba(33, 37, 41, 1),
+            rgba(33, 37, 41, 1)),
+        linear-gradient(to right,
+            #39B4B6,
+            #3DE693);
+    background-size: 100% 2px, 0 2px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+}
+
+.link-styling a:hover {
+    background-size: 0 2px, 100% 2px;
+}
+
+// Make text colored in gradient when hover styling 
+.text-styling a:hover {
+    background-color: #39B4B6;
+    background-image: linear-gradient(to right,
+            #39B4B6,
+            #3DE693);
+    background-size: 100%;
+    background-repeat: repeat;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+
+    transition: background-image 400ms;
 }
