--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,13 +3,13 @@ layout: default
 ---
 
 <div class="row g-5 mb-5">
+    <h3 class="fw-bold border-bottom pb-3">{{ site.data.settings.homepage.title }}</h3>
     <div class="col-md-8">
-        <h3 class="fw-bold">{{ site.data.settings.homepage.title }}</h3>
         <p>
             {{ site.data.settings.homepage.introduction }}
         </p>
     </div>
-    <div class="col-md-4 d-flex justify-content-end align-items-center">
+    <div class="col-md-4 d-flex justify-content-center align-items-center">
         <img src="{{ site.github.url }}{{ site.data.settings.homepage.profile_picture }}" class="rounded profile-picture" alt="The profile picture">
     </div>
 </div>
@@ -19,7 +19,7 @@ layout: default
         <h3 class="fw-bold border-bottom pb-3 mb-5">News</h3>
         {% for post in site.posts %}
         <p class="link-styling">
-            <a href="{{ site.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}
+            <a href="{{ site.github.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}
         </p>
         {% endfor %}
     </div>
