--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,7 @@
 $backgroundColor: #ffffff;
 $bodyColor: #212529;
 $bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$linkColor: rgb(33, 37, 41, 1) !important;
+$linkColor: rgb(33, 37, 41) !important;
 $linkHoverColor: rgb(7, 26, 171) !important;
 
 $dateAlignment: -120px;
@@ -27,7 +27,7 @@ body a {
 /* Timeline Styling. */
 // The right-hand side of the timeline 
 .timeline {
-    border-left: 3px solid $bodyColor; // the horizontal line
+    border-left: 2.5px solid $bodyColor; // the horizontal line
     margin-left: 70px; // how far the timeline is moved from the left
     position: relative;
     line-height: 1.4em;
@@ -94,8 +94,8 @@ body a {
 
 // The dots. 
 .timeline .event:after {
-    -webkit-box-shadow: 0 0 0 3px $bodyColor;
-    box-shadow: 0 0 0 3px $bodyColor;
+    -webkit-box-shadow: 0 0 0 2.5px $bodyColor;
+    box-shadow: 0 0 0 2.5px $bodyColor;
     left: -55.8px;
     background: #fff;
     border-radius: 50%;
