trying to fix the icons

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,7 @@ layout: default
         <p>
             {{ site.data.settings.homepage.introduction }}
         </p>
+        <i class="fa fa-facebook" aria-hidden="true"></i>
     </div>
     <div class="col-md-4 d-flex justify-content-center align-items-center">
         <img src="{{ site.github.url }}{{ site.data.settings.homepage.profile_picture }}" class="rounded profile-picture" alt="The profile picture">
