--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   {%- comment -%} Including Bootstrap icons {%- endcomment -%}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   {%- comment -%} Including Font Awesome icons {%- endcomment -%}
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  <script defer src="{{ site.url }}/assets/libs/fontawesome/all.min.js"></script>
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <script defer src="{{ site.github.url }}/assets/libs/fontawesome/all.min.js"></script>
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
