fixes the social media icons

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -92,7 +92,7 @@ body a {
     }
 }
 
-// The dots. 
+/* The dots.  */
 .timeline .event:after {
     -webkit-box-shadow: 0 0 0 2.5px $bodyColor;
     box-shadow: 0 0 0 2.5px $bodyColor;
