--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,32 +1,32 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid" style="padding-left: 0; padding-right: 0; padding-bottom: 20px;">
-            <!-- Navbar brand/logo -->
-            <div class="navbar-brand text-styling">
-                <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
-                    <span class="fs-4 fw-bold">{{ site.title }}</span>
-                </a>
-                <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
-                    <span class="fs-6">{{ site.description }}</span>
-                </a>
-            </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid" style="padding-left: 0; padding-right: 0; padding-bottom: 20px;">
+      <!-- Navbar brand/logo -->
+      <div class="navbar-brand text-styling">
+        <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
+          <div class="d-flex flex-column">
+            <span class="fs-4 fw-bold">{{ site.title }}</span>
+            <span class="fs-6">{{ site.description }}</span>
+          </div>
+        </a>
+      </div>
 
-            <!-- Hamburger icon (collapsed navbar) -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+      <!-- Hamburger icon (collapsed navbar) -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <!-- Collapsible navbar content -->
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    {% for item in site.data.settings.menu %}
-                    <li class="text-styling nav-item">
-                        <a class="nav-link" href="{{ site.github.url }}{{ item.url }}">{{ item.name }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </nav>
+      <!-- Collapsible navbar content -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          {% for item in site.data.settings.menu %}
+          <li class="text-styling nav-item">
+            <a class="nav-link" href="{{ site.github.url }}{{ item.url }}">{{ item.name }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
