--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -132,17 +132,17 @@ body a {
 }
 
 // Make text colored in gradient when hover styling 
-.text-styling a:hover {
-    background-image: linear-gradient(to right,
-            #39B4B6,
-            #3DE693);
-    background-size: 100%;
-    background-repeat: repeat;
-    background-clip: text;
+.text-styling a {
+    text-decoration: none;
+    color: rgb(33, 37, 41);
+    background-image: linear-gradient(to right, rgb(33, 37, 41), rgb(33, 37, 41), #39B4B6, #3DE693);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -moz-background-clip: text;
-    -moz-text-fill-color: transparent;
+    background-size: 300% 100%;
+    background-position: top left;
+    transition: all 0.4s ease-in-out;
+}
 
-    transition: background-image 400ms;
+.text-styling a:hover {
+    background-position: top left 100%;
 }
