--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,8 +1,13 @@
+$bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+// COLOURS: 
 $backgroundColor: #ffffff;
 $bodyColor: #212529;
-$bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$linkColor: rgb(33, 37, 41) !important;
-$linkHoverColor: rgb(7, 26, 171) !important;
+
+$gray: #7b7f84;
+
+$fnrsBlue: #39B4B6;
+$fnrsGreen: #3DE693;
 
 $dateAlignment: -120px;
 
@@ -13,7 +18,42 @@ body {
 }
 
 body a {
-    color: $linkColor;
+    text-decoration: none;
+    color: $bodyColor !important;
+    background:
+        linear-gradient(to right,
+            $bodyColor, $bodyColor),
+        linear-gradient(to right,
+            $fnrsBlue,
+            $fnrsGreen);
+    background-size: 100% 2px, 0 2px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+}
+
+body a:hover {
+    background-size: 0 2px, 100% 2px;
+}
+
+// Make text colored in gradient when hover styling 
+.text-styling a {
+    text-decoration: none;
+    color: $bodyColor !important;
+    background-image:
+        linear-gradient(to right, $bodyColor, $bodyColor),
+        linear-gradient(to right, $fnrsBlue, $fnrsGreen);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 100% 100%, 0% 100%;
+    background-position: 100% 100%, 0% 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+}
+
+.text-styling a:hover {
+    background-size: 0% 100%, 100% 100%;
 }
 
 .profile-picture {
@@ -24,11 +64,14 @@ body a {
     height: auto;
 }
 
+// RESEARCH PAGE
+
 /* Timeline Styling. */
 // The right-hand side of the timeline 
 .timeline {
-    border-left: 2.5px solid $bodyColor; // the horizontal line
+    border-left: 2.4px solid $bodyColor; // the horizontal line
     margin-left: 70px; // how far the timeline is moved from the left
+    margin-bottom: 70px;
     position: relative;
     line-height: 1.4em;
     font-size: 1.03em;
@@ -42,12 +85,6 @@ body a {
         max-width: 98%;
         padding: 25px;
     }
-}
-
-// the headings of each event
-.timeline h2,
-.timeline h3 {
-    margin-bottom: 10px;
 }
 
 // The text of each event 
@@ -94,10 +131,10 @@ body a {
 
 /* The dots.  */
 .timeline .event:after {
-    -webkit-box-shadow: 0 0 0 2.5px $bodyColor;
-    box-shadow: 0 0 0 2.5px $bodyColor;
+    -webkit-box-shadow: 0 0 0 2.4px $bodyColor;
+    box-shadow: 0 0 0 2.4px $bodyColor;
     left: -55.8px;
-    background: #fff;
+    background: $backgroundColor;
     border-radius: 50%;
     height: 9px;
     width: 9px;
@@ -111,42 +148,6 @@ body a {
     }
 }
 
-// Link styling
-.link-styling a {
-    text-decoration: none;
-    background:
-        linear-gradient(to right,
-            rgba(33, 37, 41, 1),
-            rgba(33, 37, 41, 1)),
-        linear-gradient(to right,
-            #39B4B6,
-            #3DE693);
-    background-size: 100% 2px, 0 2px;
-    background-position: 100% 100%, 0 100%;
-    background-repeat: no-repeat;
-    transition: background-size 400ms;
-}
-
-.link-styling a:hover {
-    background-size: 0 2px, 100% 2px;
-}
-
-// Make text colored in gradient when hover styling 
-.text-styling a {
-    text-decoration: none;
-    color: rgb(33, 37, 41);
-    background-image:
-        linear-gradient(to right, rgb(33, 37, 41), rgb(33, 37, 41)),
-        linear-gradient(to right, #39B4B6, #3DE693);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 100% 100%, 0% 100%;
-    background-position: 100% 100%, 0% 100%;
-    background-repeat: no-repeat;
-    transition: background-size 400ms;
-}
-
-.text-styling a:hover {
-    background-size: 0% 100%, 100% 100%;
+.research-authors {
+    color: $gray;
 }
