--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -7,15 +7,13 @@ layout: default
     <h3 class="fw-bold border-bottom pb-3 mb-5">Contact</h3>
     {% for contact in site.data.settings.contacts %}
     <div class="row g-5 mb-5">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <h4>{{ contact.name }}</h4>
         <p>{{ contact.title }} | {{ contact.department }}</p>
         <p>{{ contact.institution }} | {{ contact.institution_address }}</p>
-        <p>Phone: {{ contact.phone }}</p>
-        <p>Email: {{ contact.email }}</p>
-        <p>Office: {{ contact.office }}</p>
+        <p>Email: <a href="mailto: {{ contact.email }}">{{ contact.email }}</a></p>
       </div>
-      <div class="col-md-6 d-flex justify-content-center align-items-center">
+      <div class="col-md-4 d-flex justify-content-center align-items-center">
         <img class="rounded profile-picture" src="{{ site.github.url }}/{{ contact.image }}" alt="Contact" width="100%">
       </div>
     </div>
