--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,8 @@ $fnrsGreen: #3DE693;
 
 $dateAlignment: -120px;
 
+// GENERAL
+
 body {
     background: $backgroundColor;
     color: $bodyColor;
@@ -62,6 +64,13 @@ body a:hover {
     max-height: 200px;
     width: auto;
     height: auto;
+}
+
+// Social Media Icons
+.social-media-icons a {
+    text-decoration: none;
+    color: $bodyColor !important;
+    background: none;
 }
 
 // RESEARCH PAGE
