--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   {%- comment -%} Including Bootstrap icons {%- endcomment -%}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   {%- comment -%} Including Font Awesome icons {%- endcomment -%}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <script src="https://kit.fontawesome.com/d78b9bd9e5.js" crossorigin="anonymous"></script>
   {%- comment -%} Linking the custom stylesheet {%- endcomment -%}
   <link rel="stylesheet" href="/assets/css/styles.css">
 
@@ -38,7 +38,7 @@
       tooltip.innerHTML = "Copied";
 
       setTimeout(function() {
-        tooltip.innerHTML = "Copy Citation (Harvard)";
+        tooltip.innerHTML = "Copy Citation (IEEE)";
       }, 3000);
     }
   </script>
