adds content to CV page and button to download CV

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,7 +9,8 @@ layout: default
     <div class="row g-5 mb-5">
       <div class="col-md-8">
         <h4>{{ contact.name }}</h4>
-        <p>{{ contact.title }} | {{ contact.department }}</p>
+        <p>{{ contact.title }}</p>
+        <p>{{ contact.department }}</p>
         <p>{{ contact.institution }} | {{ contact.institution_address }}</p>
         <p>Email: <a href="mailto: {{ contact.email }}">{{ contact.email }}</a></p>
       </div>
