--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -7,26 +7,48 @@ layout: default
 <div class="row g-5 mb-5">
     <div>
         <h3 class="fw-bold border-bottom pb-3 mb-5">CV</h3>
-        <div class="row g-5 mb-5">
-            <div class="col-md-2">
-                <h4>Education</h4>
-            </div>
-            <div class="col-md-10">
-                {% for section in site.data.cv.education %}
-                <p class="fw-bold">{{ section.title }}</p>
-                <p>{{ section.description }}</p>
-                {% endfor %}
-            </div>
-        </div>
+
         <div class="row g-5 mb-5">
             <div class="col-md-2">
                 <h4>Research Experience</h4>
             </div>
-            <div class="col-md-10">
-                {% for section in site.data.cv.research-experience %}
-                <p class="fw-bold">{{ section.title }}</p>
-                <p>{{ section.description }}</p>
-                {% endfor %}
+            <div class="col-md-10 px-3">
+            {% for section in site.data.cv.research-experience %}
+                <div class="row g-2">
+                    <div class="col-md-2 px-1 py-0">
+                        <p class="mb-1">{{ section.years }}</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p class="fw-bold mb-1">{{ section.title }}</p>
+                        <p>{{ section.description }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
+        </div>
+        <div class="row g-5 mb-5">
+            <div class="col-md-2">
+                <h4>Education</h4>
+            </div>
+            <div class="col-md-10 px-3">
+            {% for section in site.data.cv.education %}
+                <div class="row g-2">
+                    <div class="col-md-2 px-1 py-0">
+                        <p class="mb-1">{{ section.years }}</p>
+                    </div>
+                    <div class="col-md-10">
+                        <p class="fw-bold mb-1">{{ section.title }}</p>
+                        <p>{{ section.description }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
+        </div>
+        <div class="row g-5 mb-3 justify-content-center align-items-center text-center">
+            <div class="col-md-12 no-link-styling">
+                <a href="{{ site.github.url }}/_data/cv/CV.pdf" target="_blank">
+                    <button type="button" class="btn btn-outline-dark btn-sm"><i class="fa-solid fa-download"></i> Download CV </button>
+                </a>
             </div>
         </div>
     </div>
