fixes small problems

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -215,7 +215,7 @@ body a:hover {
     opacity: 1;
 }
 
-.fas:hover .tooltiptext {
+.hidden-icon:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
 }
