--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,14 +5,14 @@ layout: default
 {{ content }}
 
 <div class="row g-5 mb-5">
-    <div>
+    <div class="col-md-12">
         <h3 class="fw-bold border-bottom pb-3 mb-5">CV</h3>
 
         <div class="row g-5 mb-5">
             <div class="col-md-2">
                 <h4>Research Experience</h4>
             </div>
-            <div class="col-md-10 px-3">
+            <div class="col-md-10">
             {% for section in site.data.cv.research-experience %}
                 <div class="row g-2">
                     <div class="col-md-2 px-1 py-0">
@@ -30,7 +30,7 @@ layout: default
             <div class="col-md-2">
                 <h4>Education</h4>
             </div>
-            <div class="col-md-10 px-3">
+            <div class="col-md-10">
             {% for section in site.data.cv.education %}
                 <div class="row g-2">
                     <div class="col-md-2 px-1 py-0">
