--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -46,7 +46,7 @@ layout: default
         </div>
         <div class="row g-5 mb-3 justify-content-center align-items-center text-center">
             <div class="col-md-12 no-link-styling">
-                <a href="{{ site.github.url }}/_data/cv/CV.pdf" target="_blank">
+                <a href="{{ site.github.url }}/assets/img/CV.pdf" download="Favaro_Pietro_CV">
                     <button type="button" class="btn btn-outline-dark btn-sm"><i class="fa-solid fa-download"></i> Download CV </button>
                 </a>
             </div>
