google search console

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
   <script src="https://kit.fontawesome.com/d78b9bd9e5.js" crossorigin="anonymous"></script>
   {%- comment -%} Linking the custom stylesheet {%- endcomment -%}
   <link rel="stylesheet" href="/assets/css/styles.css">
+  {%- comment -%} Google Search Console {%- endcomment -%}
+  <meta name="google-site-verification" content="1MBqasZm-EWguG5d4ZILHgVOop1wIhc3F6lKv4WmTrc" />
 
   {%- comment -%} Custom JS {%- endcomment -%}
   <script>
