--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,8 @@ $fnrsGreen: #3DE693;
 
 $dateAlignment: -120px;
 
+$transitionSpeed: 0.4s;
+
 // GENERAL
 
 body {
@@ -78,19 +80,93 @@ body a:hover {
     background-size: 0% 100%, 100% 100%;
 }
 
+// Social Media Icons
+.social-media-icons a {
+    text-decoration: none;
+    color: $bodyColor !important;
+    background: none;
+}
+
+// HOME PAGE
+
+/* Styling for the two buttons */
+.cbutton-full {
+    color: white;
+    background:
+        linear-gradient(to right,
+            $fnrsBlue,
+            $fnrsGreen);
+    border-radius: 50px;
+    background-size: 100% 100%;
+    border: none;
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    font-weight: 500;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    transition: all $transitionSpeed ease 0s;
+}
+
+.cbutton-outline {
+    text-decoration: none;
+    background-image:
+        linear-gradient(to right, $fnrsBlue, $fnrsGreen);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
+    border: transparent;
+    border-radius: 50px;
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    font-weight: 500;
+    /* offset-x, offset-y, blur-radius, color */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    transition: all $transitionSpeed ease 0s;
+}
+
+.cbutton-outline::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 50px;
+    padding: 0.375rem 0.75rem;
+    border: 3px solid transparent;
+    background: linear-gradient(to right, $fnrsBlue, $fnrsGreen) border-box;
+    /*3*/
+    -webkit-mask:
+        linear-gradient(#fff 0 0) padding-box,
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+}
+
+.cbutton-full:hover,
+.cbutton-outline:hover {
+    box-shadow: none;
+}
+
+/* Styling for the profile picture */
 .profile-picture {
     display: block;
     max-width: 200px;
     max-height: 200px;
     width: auto;
     height: auto;
+    border-radius: 0px 0px 140px 140px;
+    position: relative;
+    z-index: 1;
+    bottom: 7px;
 }
 
-// Social Media Icons
-.social-media-icons a {
-    text-decoration: none;
-    color: $bodyColor !important;
-    background: none;
+.profile-picture-background {
+    background-clip: content-box;
+    // make the background as high as the picture
+    height: 183px;
+    background-repeat: no-repeat;
+    // curve the background 
+    border-radius: 140px 0px 140px 140px;
+    // background color: 
+    background-image: linear-gradient(45deg, $fnrsBlue, rgba(57, 180, 182, 0.8), rgba(61, 230, 147, 0.8));
 }
 
 // RESEARCH PAGE
@@ -186,7 +262,7 @@ body a:hover {
 .hidden-hover .hidden-icon {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0.4s linear, opacity 0.4s linear;
+    transition: visibility $transitionSpeed linear, opacity $transitionSpeed linear;
     padding-left: 10px;
     padding-top: 6px;
     color: $fnrsBlue;
@@ -230,7 +306,7 @@ body a:hover {
     color: $backgroundColor;
     font-family: $bodyFont;
     border-radius: 6px;
-    transition: visibility 0.4s, opacity 0.4s;
+    transition: visibility $transitionSpeed, opacity $transitionSpeed;
 }
 
 .tooltiptext::after {
