Fixes problems such as links to blogs and images.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,11 +9,11 @@ layout: default
             {{ site.data.settings.homepage.introduction | markdownify }}
         </p>
         <div class="d-flex justify-content-center no-link-styling">
-            <a href="{{ site.github.url }}/assets/img/CV.pdf" download="Favaro_Pietro_CV">
-                <button type="button" class="cbutton-full mx-5">More on PSMR</button>
+            <a href="https://www.linkedin.com/company/power-systems-and-market-research-group-psmr-umons/?originalSubdomain=be" target="_blank">
+                <button type="button" class="cbutton-full mx-lg-5 mx-sm-2">More on PSMR</button>
             </a>
-            <a href="{{ site.github.url }}/assets/img/CV.pdf" download="Favaro_Pietro_CV">
-                <button type="button" class="cbutton-outline mx-5">Contact Me</button>
+            <a href="{{ site.github.url }}/contact">
+                <button type="button" class="cbutton-outline mx-lg-5 mx-sm-2">Contact Me</button>
             </a>
         </div>
     </div>
