adds icon for google search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
   {%- comment -%} Google Search Console {%- endcomment -%}
   <meta name="google-site-verification" content="1MBqasZm-EWguG5d4ZILHgVOop1wIhc3F6lKv4WmTrc" />
+  {%- comment -%} Favicon for google {%- endcomment -%}
+  <link rel="icon" href="../favicon.ico" />
 
   {%- comment -%} Custom JS {%- endcomment -%}
   <script>
